优化人物详情页加载速度；修复扫描照片子文件夹的问题